--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,25 +1,25 @@
-name: Test
+name: Build
 
 on:
   push:
+    branches:
+      - main
     paths-ignore:
       - '**.md'
   pull_request:
     paths-ignore:
       - '**.md'
-  schedule:
-    - cron: "0 0 * * 5"
 
 jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
-
+        os:
+          - ubuntu-latest
+          - macos-latest
     runs-on: ${{ matrix.os }}
-
     steps:
       - name: asdf plugin test
         uses: asdf-vm/actions/plugin-test@v1.1.0
         with:
-          command: terraformer --help
+          command: terraformer --version
